# robotsix-board-agent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  modules.yaml  objects.inv  pyproject.toml  vulture_whitelist.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-git-pin.yml  ci.yml  codeql-scheduled.yml  deps-bump.yml  docs.yml  release.yml  scorecard.yml
.robotsix-mill/periodic/: security_posture.yaml
agent/getting-started/: index.html
architecture/: index.html
board_manager/api/: index.html
brokered/responder/: index.html
client/api/: index.html
config/reference/: index.html
configuration/: index.html
constants/reference/: index.html
docs/: architecture.md  configuration.md  modules.yaml  reference.md
docs/agent/: getting-started.md
docs/board_manager/: api.md
docs/brokered/: responder.md
docs/client/: api.md
docs/config/: reference.md
docs/constants/: reference.md
docs/manager_cli/: usage.md
docs/memory/: reference.md
docs/ops/: operations.md
manager_cli/usage/: index.html
memory/reference/: index.html
ops/operations/: index.html
reference/: index.html
scripts/: bump_git_pin.py  check_kind_literals.py  completeness_check.py
site/: 404.html
site/getting-started/: index.html
site/operations/: index.html
site/search/: search_index.json
src/robotsix_board_agent/: __init__.py  _imports.py  _lifecycle.py  _request_handler.py  agent.py  board_manager.py  brokered.py  client.py  config.py  constants.py  manager_cli.py  memory.py  ops.py
tests/: agent_comm_stubs.py  conftest.py  test__imports.py  test__lifecycle.py  test__request_handler.py  test_agent.py  test_board_manager.py  test_client.py  test_manager_cli.py  test_memory.py  test_ops.py
tests/agent/: test_agent.py
tests/board_manager/: test_board_manager.py
tests/brokered/: test_brokered.py
tests/client/: test_client.py
tests/config/: __init__.py  test_config.py
tests/constants/: test_constants.py
tests/manager_cli/: test_manager_cli.py
tests/memory/: test_memory.py
tests/ops/: test_ops.py
tests/scripts/: test_bump_git_pin.py  test_check_kind_literals.py  test_completeness_check_helpers.py
