[project]
name = "robotsix-board-agent"
version = "0.1.0"
description = "Agent-comm agent exposing the mill board's full ticket lifecycle over structured messages"
requires-python = ">=3.14"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "robotsix-llmio",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21",
    "pytest-cov>=7",
    "pytest-xdist>=3",
    "mypy>=1.15",
    "ruff==0.15.17",
    "vulture>=2.14",
]
prod = [
    "robotsix-agent-comm",
]
tracing = []

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.21", "pytest-cov>=7", "pytest-xdist>=3", "mypy>=1.15", "ruff==0.15.17", "vulture>=2.14"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
robotsix-agent-comm = { git = "https://github.com/damien-robotsix/robotsix-agent-comm.git", rev = "main" }
# Pinned to a commit (NOT rev=main): robotsix-mill consumes BOTH this package
# and robotsix-llmio, so a moving `@main` here re-resolves on every fresh
# `uv export --frozen` in mill's Docker build and conflicts with mill's locked
# llmio commit, freezing mill's deploys. Bump in lockstep with mill's llmio pin.
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "765489a6b2433df066cfe178e07327be99d20014" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_board_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["robotsix_board_agent"]

[tool.ruff.lint.per-file-ignores]
"vulture_whitelist.py" = ["B018", "F821"]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
explicit_package_bases = true
mypy_path = "src"
files = ["src/robotsix_board_agent", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "robotsix_agent_comm"
ignore_missing_imports = true

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --tb=short"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

