[project]
name = "robotsix-board-agent"
version = "0.1.0"
description = "Agent-comm agent exposing the mill board's full ticket lifecycle over structured messages"
requires-python = ">=3.14"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "robotsix-llmio",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21",
    "pytest-cov>=7",
    "pytest-xdist>=3",
    "mypy>=1.15",
    "ruff==0.15.15",
    "vulture>=2.14",
]
prod = [
    "robotsix-agent-comm",
]
tracing = []

[project.scripts]
# CLI to talk to the board manager over the broker (needs the `prod` extra for
# robotsix-agent-comm).
robotsix-board-manager = "robotsix_board_agent.manager_cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.21", "pytest-cov>=7", "pytest-xdist>=3", "mypy>=1.15", "ruff==0.15.15", "vulture>=2.14"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
# Both pinned to a commit (NOT rev=main): robotsix-mill consumes BOTH this
# package and robotsix-llmio, so a moving `@main` here re-resolves on every
# fresh `uv export --frozen` in mill's Docker build and conflicts with mill's
# locked commits, freezing mill's deploys. Bump in lockstep with mill's pins.
robotsix-agent-comm = { git = "https://github.com/damien-robotsix/robotsix-agent-comm.git", rev = "fcf9adab4c0aa70de8221ce6c402cf0d4c1ddc4d" }
robotsix-llmio = { git = "https://github.com/damien-robotsix/robotsix-llmio.git", rev = "6cc7f41b8ebb5af0fa7020be275da590cf3698d1" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_board_agent"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "S"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["robotsix_board_agent"]

[tool.ruff.lint.per-file-ignores]
"vulture_whitelist.py" = ["B018", "F821"]
"tests/**" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
python_version = "3.14"
explicit_package_bases = true
mypy_path = "src"
files = ["src/robotsix_board_agent", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["robotsix_agent_comm", "robotsix_agent_comm.*"]
ignore_missing_imports = true

[tool.deptry]
optional_dependencies_dev_groups = ["dev"]
known_first_party = ["robotsix_board_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q --tb=short"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["robotsix_board_agent"]
branch = true
relative_files = true
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

